# biobb_vs_workflows

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml
biobb_vs_workflows/cavity_analysis/: README.md  cavity_analysis.py  input.yml
biobb_vs_workflows/common/: __init__.py
biobb_vs_workflows/vs_autodock/: README.md  vs_autodock.py
data/ligands/: zinc_200_425_001_reduced.sdf
docs/: conf.py  environment.yml  index.md  installation.md
docs/workflows/: cavity_analysis.md  vs_autodock.md
notebooks/: colab_environment.yml  local_environment.yml  notebook_tutorial.ipynb
tests/cavity_analysis/: run.sl
tests/vs_autodock/: run.sl
