[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biobb_vs_workflows"
version = "0.0.1"
requires-python = "==3.11"
dependencies = [
    "biobb_common>=5.2.2",
    "biobb_structure_utils>=5.2.1",
    "biobb_io>=5.2.3",
    "biobb_vs>=5.0.0",
    "biobb_gromacs>=5.2.0",
    "biobb_chemistry>=5.2.1",
    "biobb_analysis>=5.2.1",
    "mdanalysis",
    "openbabel==3.1.1"
    "biopython",
]

[project.scripts]
cavity_analysis = "biobb_vs_workflows.cavity_analysis.cavity_analysis:main"
vs_autodock      = "biobb_vs_workflows.vs_autodock.vs_autodock:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["biobb_vs_workflows*"]
